--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 html,
 body {
   font-family: 'Montserrat', sans-serif;
+  background-color: var(--bg-main);
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 a {
