--- a/app/globals.css
+++ b/app/globals.css
@@ -1,29 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 html,
 body {
-  font-family: 'Montserrat', sans-serif;
-  background-color: var(--bg-main);
-  min-height: 100vh;
-  min-width: 100vw;
+    font-family: "Montserrat", sans-serif;
+    background-color: var(--bg-main);
+    min-height: 100vh;
+    min-width: 580px;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 :root {
-  --bg-main: #202020;
-  --bg-secondary: #1e1e1e;
-  --bg-button: #2b2b2b;
-  --font-color-main: #fff;
-  --font-color-secondary: #d3d3d3;
-  --border-color: #686868;
+    --bg-main: #202020;
+    --bg-secondary: #1e1e1e;
+    --bg-button: #2b2b2b;
+    --font-color-main: #fff;
+    --font-color-secondary: #d3d3d3;
+    --border-color: #686868;
 }
