--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -1,42 +1,51 @@
 .header {
-  width: 60%;
-  height: 80px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--font-color-main);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 50rem;
+    min-width: 35rem;
+    height: 80px;
+    margin: 0 auto;
+}
+
+.header > div {
+    padding: 0 30px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--font-color-main);
 }
 
 .name {
-  font-size: 24px;
-  font-weight: 600;
+    font-size: 24px;
+    font-weight: 600;
 }
 
 .nav {
-  width: 30%;
-  display: flex;
-  justify-content: space-between;
+    width: 12rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .link {
-  color: var(--font-color-main);
-  transition: 0.1s;
+    color: var(--font-color-main);
+    transition: 0.1s;
 }
 
 .link:hover {
-  color: var(--font-color-secondary);
+    color: var(--font-color-secondary);
 }
 
 .footer {
-  height: 60px;
-  background-color: var(--bg-secondary);
-  text-align: center;
-  line-height: 60px;
-  color: var(--font-color-secondary);
-  font-size: 20px;
+    height: 60px;
+    background-color: var(--bg-secondary);
+    text-align: center;
+    line-height: 60px;
+    color: var(--font-color-secondary);
+    font-size: 20px;
 }
 
 .footer > a {
-  color: var(--font-color-main);
+    color: var(--font-color-main);
 }
