--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,20 +1,22 @@
 .main {
-  margin: 0 auto;
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: calc(100vh - 80px - 60px);
+    margin: 0 auto;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 80px - 60px);
 }
 
 .header {
-  color: var(--font-color-main);
-  font-size: 32px;
+    color: var(--font-color-main);
+    font-size: 32px;
+    text-align: center;
 }
 
 .text {
-  color: var(--font-color-secondary);
-  font-size: 20px;
-  margin: 10px 0;
+    color: var(--font-color-secondary);
+    font-size: 20px;
+    margin: 10px 0;
+    text-align: center;
 }
